Added VIP data information to the README

--- a/README
+++ b/README
@@ -15,7 +15,40 @@ This script takes in a set of either real-time or archived model data (e.g. ARM-
        [3] BHOUR - beginning hour of profiles (ex: 5)
        [4] EHOUR - ending hour of profiles (ex: 5)
 
+    Output:
+        Files of the name format of: RRmodelsoundings.YYYYMMDD.HH.LAT.LON.cdf
+
 ABOUT THE VIP FILE:
 
+The VIP file is similar to the AERIoe format in order to reduce the number of files needed to run AERIoe.
+Here are the variables included in the VIP file, along with a description of them:
 
+Variable: data_source
+Required?: YES
+Options: 1 - NOAA NOMADS RAP/RUC analysis archive
+         2 - ARM-formatted RAP/RUC hourly analysis files
+         3 - 13 km RAP Motherlode UCAR data server (forecast and analysis data)
+Description:
+These three options can be used to generate files for different AERI data.
+    1 - contains analysis data for the CONUS back to 2010, however data outages are sporatic.
+        More recent data may be less sporadic.  This data source is recommended when you need
+        model observations outside of the SGP, however it may work for the 2011-2013 NWC AERI deployment.
 
+    2 - Contains analysis data for the SGP back to the 90s.  You'll have to download this data from the ARM archive
+        however data for this does exist on the ARM cluster and the RAID.  The data files need to be hourly and of the format:
+
+            sgpallruc60X1.c0        05/08/1996  to  04/23/1998  (not tested)
+            sgpallruc40isobX1.c1    04/20/1998  to  04/16/2002  (tested)
+            sgpsynruc20isobX1.c1    04/18/2002  to  05/01/2012  (tested)
+            sgpsynrap20plevX1.c1    05/01/2012  to  current     (tested)
+
+        The ARM archive also supports data on the native grid (hybrid levels).  Support for this data type has not been implemented
+        in this program, however it may happen in the future since the hybrid levels provide a higher resolution data grid than
+        these isobaric files.
+
+        Selection of this data source option requires implementing the "arm_model_dir" VIP variable.
+
+    3 - Uses analysis and forecast data from the 13 km RAP data located on the UCAR Motherlode server.
+        This data source semi-realtime data from the last 2 weeks and is updated regularly.  When using this data source,
+        the program will use forecast data if analysis data does not exist for the time frame specified.  It is recommended that
+        this data source is used for real-time generation of RAP Model Observation files.  
