--- a/README
+++ b/README
@@ -30,9 +30,7 @@ Options: 1 - NOAA NOMADS RAP/RUC analysis archive
          3 - 13 km RAP Motherlode UCAR data server (forecast and analysis data)
 Description:
 These three options can be used to generate files for different AERI data.
-    1 - contains analysis data for the CONUS back to 2010, however data outages are sporatic.
-        More recent data may be less sporadic.  This data source is recommended when you need
-        model observations outside of the SGP, however it may work for the 2011-2013 NWC AERI deployment.
+    1 - contains analysis data for the CONUS back to 2010, however data outages are sporatic.  More recent data may be less sporadic.  This data source is recommended when you need model observations outside of the SGP, however it may work for the 2011-2013 NWC AERI deployment.
 
     2 - Contains analysis data for the SGP back to the 90s.  You'll have to download this data from the ARM archive
         however data for this does exist on the ARM cluster and the RAID.  The data files need to be hourly and of the format:
